[tool.poetry]
name = "apex-air"
version = "0.1.0"
description = "Django project to shoe air quality in cities"
authors = ["Milad <milad.hz75@gmail.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "apex_air"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
